--- a/CustomCamera/Base.lproj/Main.storyboard
+++ b/CustomCamera/Base.lproj/Main.storyboard
@@ -1,22 +1,118 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Custom Camera View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="CustomCameraViewController" customModule="CustomCamera" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AQg-1b-pyQ" userLabel="preview image">
+                                <rect key="frame" x="8" y="28" width="359" height="503"/>
+                            </view>
+                            <view alpha="0.29999999999999999" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BFA-ta-9VP" userLabel="mask preview image" customClass="GradientView" customModule="CustomCamera" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="20" width="375" height="503"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
+                            </view>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fKE-8b-AGr" userLabel="captured image">
+                                <rect key="frame" x="8" y="539" width="231" height="120"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="120" id="cQy-GJ-CSS"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bcY-bi-bOL" userLabel="Take Photo">
+                                <rect key="frame" x="247" y="539" width="120" height="120"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="120" id="d4e-jx-ggW"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="bcY-bi-bOL" secondAttribute="trailing" constant="8" id="3tX-gW-7Qq"/>
+                            <constraint firstItem="bcY-bi-bOL" firstAttribute="height" secondItem="fKE-8b-AGr" secondAttribute="height" id="8c1-K4-nw4"/>
+                            <constraint firstItem="AQg-1b-pyQ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="8" id="DkP-pK-bqq"/>
+                            <constraint firstItem="BFA-ta-9VP" firstAttribute="height" secondItem="AQg-1b-pyQ" secondAttribute="height" id="ESX-gf-6cu"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="fKE-8b-AGr" secondAttribute="bottom" constant="8" id="FZf-UP-i9r"/>
+                            <constraint firstItem="BFA-ta-9VP" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="GlP-B6-fwE"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="AQg-1b-pyQ" secondAttribute="trailing" constant="8" id="Lb7-Aq-lpY"/>
+                            <constraint firstItem="fKE-8b-AGr" firstAttribute="top" secondItem="AQg-1b-pyQ" secondAttribute="bottom" constant="8" id="SEe-5x-Lzm"/>
+                            <constraint firstItem="BFA-ta-9VP" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Se1-1P-HxH"/>
+                            <constraint firstItem="fKE-8b-AGr" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="8" id="WgM-FD-46K"/>
+                            <constraint firstItem="AQg-1b-pyQ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="8" id="XWi-eS-hae"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="bcY-bi-bOL" secondAttribute="bottom" constant="8" id="dpK-Rx-Dev"/>
+                            <constraint firstItem="BFA-ta-9VP" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="fUP-Bf-kSh"/>
+                            <constraint firstItem="bcY-bi-bOL" firstAttribute="leading" secondItem="fKE-8b-AGr" secondAttribute="trailing" constant="8" id="rDL-Z1-Veq"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="customView" destination="fbR-Rw-h1i" id="ZNG-uA-x02"/>
+                        <outlet property="pictureUIImageView" destination="fKE-8b-AGr" id="JD2-d7-t5F"/>
+                        <outlet property="previewView" destination="AQg-1b-pyQ" id="i8u-2h-o4D"/>
+                    </connections>
                 </viewController>
+                <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="fbR-Rw-h1i" customClass="CustomOverlayView" customModule="CustomCamera" customModuleProvider="target">
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="732"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My Photo" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kr3-eq-2ec">
+                            <rect key="frame" x="170.5" y="355.5" width="73" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="06I-1z-AwF">
+                            <rect key="frame" x="20" y="612" width="100" height="100"/>
+                            <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstAttribute="width" secondItem="06I-1z-AwF" secondAttribute="height" multiplier="1:1" id="VHe-yb-Hca"/>
+                                <constraint firstAttribute="width" constant="100" id="Wc0-Q1-1b6"/>
+                            </constraints>
+                            <state key="normal" title="Shoot"/>
+                            <connections>
+                                <action selector="shootButtonWithSender:" destination="fbR-Rw-h1i" eventType="touchUpInside" id="i4u-Qk-dIb"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rgf-iF-9j7">
+                            <rect key="frame" x="294" y="612" width="100" height="100"/>
+                            <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="100" id="SXr-ep-5nj"/>
+                                <constraint firstAttribute="width" secondItem="Rgf-iF-9j7" secondAttribute="height" multiplier="1:1" id="Wka-KN-rcX"/>
+                            </constraints>
+                            <state key="normal" title="Cancel"/>
+                            <connections>
+                                <action selector="cancelButtonWithSender:" destination="fbR-Rw-h1i" eventType="touchUpInside" id="1Qu-Tr-1an"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                    <constraints>
+                        <constraint firstItem="Rgf-iF-9j7" firstAttribute="width" secondItem="Rgf-iF-9j7" secondAttribute="height" multiplier="1:1" id="2O0-jv-VdD"/>
+                        <constraint firstAttribute="bottom" secondItem="Rgf-iF-9j7" secondAttribute="bottom" constant="20" id="EUj-Gn-2C9"/>
+                        <constraint firstItem="kr3-eq-2ec" firstAttribute="centerY" secondItem="fbR-Rw-h1i" secondAttribute="centerY" id="GdI-i0-mg7"/>
+                        <constraint firstItem="kr3-eq-2ec" firstAttribute="centerX" secondItem="fbR-Rw-h1i" secondAttribute="centerX" id="OUr-CE-VEL"/>
+                        <constraint firstAttribute="trailing" secondItem="Rgf-iF-9j7" secondAttribute="trailing" constant="20" id="g6C-p2-tbs"/>
+                        <constraint firstAttribute="bottom" secondItem="06I-1z-AwF" secondAttribute="bottom" constant="20" id="sGo-PV-Uc9"/>
+                        <constraint firstItem="06I-1z-AwF" firstAttribute="leading" secondItem="fbR-Rw-h1i" secondAttribute="leading" constant="20" id="v5v-Pu-z8k"/>
+                    </constraints>
+                    <viewLayoutGuide key="safeArea" id="bG9-Ez-faL"/>
+                    <connections>
+                        <outlet property="cameraLabel" destination="kr3-eq-2ec" id="4f2-9K-rTn"/>
+                    </connections>
+                </view>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
