--- a/CustomCamera/Base.lproj/CustomCamera.storyboard
+++ b/CustomCamera/Base.lproj/CustomCamera.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina4_7" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,24 +15,24 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="CustomCameraViewController" customModule="CustomCamera" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AQg-1b-pyQ" userLabel="preview image">
-                                <rect key="frame" x="8" y="28" width="359" height="503"/>
+                                <rect key="frame" x="8" y="8" width="651" height="231"/>
                             </view>
                             <view alpha="0.29999999999999999" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BFA-ta-9VP" userLabel="mask preview image" customClass="GradientView" customModule="CustomCamera" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="20" width="375" height="503"/>
+                                <rect key="frame" x="0.0" y="0.0" width="667" height="231"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                             </view>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fKE-8b-AGr" userLabel="captured image">
-                                <rect key="frame" x="8" y="539" width="231" height="120"/>
+                                <rect key="frame" x="8" y="247" width="523" height="120"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="120" id="cQy-GJ-CSS"/>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bcY-bi-bOL" userLabel="Take Photo">
-                                <rect key="frame" x="247" y="539" width="120" height="120"/>
+                                <rect key="frame" x="539" y="247" width="120" height="120"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="120" id="d4e-jx-ggW"/>
                                 </constraints>
@@ -68,53 +68,61 @@
                     <rect key="frame" x="0.0" y="0.0" width="414" height="732"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My Photo" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kr3-eq-2ec">
-                            <rect key="frame" x="170.5" y="355.5" width="73" height="21"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <nil key="textColor"/>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="camera_bg" translatesAutoresizingMaskIntoConstraints="NO" id="Rlj-tk-Brb">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="732"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        </imageView>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Certifique-se de que o documento não esteja cobrindo seu rosto." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kr3-eq-2ec">
+                            <rect key="frame" x="56" y="8" width="334" height="33.5"/>
+                            <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="06I-1z-AwF">
-                            <rect key="frame" x="20" y="612" width="100" height="100"/>
-                            <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="calibratedWhite"/>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rgf-iF-9j7">
+                            <rect key="frame" x="24" y="22" width="16" height="22"/>
                             <constraints>
-                                <constraint firstAttribute="width" secondItem="06I-1z-AwF" secondAttribute="height" multiplier="1:1" id="VHe-yb-Hca"/>
-                                <constraint firstAttribute="width" constant="100" id="Wc0-Q1-1b6"/>
+                                <constraint firstAttribute="width" constant="16" id="LKt-Io-rUx"/>
+                                <constraint firstAttribute="height" constant="22" id="Nzr-Y2-EAU"/>
+                            </constraints>
+                            <state key="normal" image="arrow_back_white"/>
+                            <connections>
+                                <action selector="cancelButtonWithSender:" destination="fbR-Rw-h1i" eventType="touchUpInside" id="1Qu-Tr-1an"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="06I-1z-AwF">
+                            <rect key="frame" x="157" y="612" width="100" height="100"/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="100" id="3jC-QK-mz0"/>
+                                <constraint firstAttribute="width" secondItem="06I-1z-AwF" secondAttribute="height" multiplier="1:1" id="NT4-Ce-PbP"/>
+                                <constraint firstAttribute="width" constant="100" id="Vkz-m9-h1W"/>
                             </constraints>
                             <state key="normal" title="Shoot"/>
                             <connections>
                                 <action selector="shootButtonWithSender:" destination="fbR-Rw-h1i" eventType="touchUpInside" id="i4u-Qk-dIb"/>
                             </connections>
                         </button>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rgf-iF-9j7">
-                            <rect key="frame" x="294" y="612" width="100" height="100"/>
-                            <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="calibratedWhite"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="100" id="SXr-ep-5nj"/>
-                                <constraint firstAttribute="width" secondItem="Rgf-iF-9j7" secondAttribute="height" multiplier="1:1" id="Wka-KN-rcX"/>
-                            </constraints>
-                            <state key="normal" title="Cancel"/>
-                            <connections>
-                                <action selector="cancelButtonWithSender:" destination="fbR-Rw-h1i" eventType="touchUpInside" id="1Qu-Tr-1an"/>
-                            </connections>
-                        </button>
                     </subviews>
                     <constraints>
-                        <constraint firstItem="Rgf-iF-9j7" firstAttribute="width" secondItem="Rgf-iF-9j7" secondAttribute="height" multiplier="1:1" id="2O0-jv-VdD"/>
-                        <constraint firstAttribute="bottom" secondItem="Rgf-iF-9j7" secondAttribute="bottom" constant="20" id="EUj-Gn-2C9"/>
-                        <constraint firstItem="kr3-eq-2ec" firstAttribute="centerY" secondItem="fbR-Rw-h1i" secondAttribute="centerY" id="GdI-i0-mg7"/>
-                        <constraint firstItem="kr3-eq-2ec" firstAttribute="centerX" secondItem="fbR-Rw-h1i" secondAttribute="centerX" id="OUr-CE-VEL"/>
-                        <constraint firstAttribute="trailing" secondItem="Rgf-iF-9j7" secondAttribute="trailing" constant="20" id="g6C-p2-tbs"/>
-                        <constraint firstAttribute="bottom" secondItem="06I-1z-AwF" secondAttribute="bottom" constant="20" id="sGo-PV-Uc9"/>
-                        <constraint firstItem="06I-1z-AwF" firstAttribute="leading" secondItem="fbR-Rw-h1i" secondAttribute="leading" constant="20" id="v5v-Pu-z8k"/>
+                        <constraint firstItem="bG9-Ez-faL" firstAttribute="trailing" secondItem="kr3-eq-2ec" secondAttribute="trailing" constant="24" id="54P-TH-wvf"/>
+                        <constraint firstItem="06I-1z-AwF" firstAttribute="centerX" secondItem="bG9-Ez-faL" secondAttribute="centerX" id="5eU-wD-iRK"/>
+                        <constraint firstItem="Rgf-iF-9j7" firstAttribute="leading" secondItem="bG9-Ez-faL" secondAttribute="leading" constant="24" id="KKE-vL-RA7"/>
+                        <constraint firstItem="bG9-Ez-faL" firstAttribute="bottom" secondItem="06I-1z-AwF" secondAttribute="bottom" constant="20" id="ZFY-wl-UvR"/>
+                        <constraint firstItem="kr3-eq-2ec" firstAttribute="leading" secondItem="Rgf-iF-9j7" secondAttribute="trailing" constant="16" id="dp6-eP-iPX"/>
+                        <constraint firstItem="kr3-eq-2ec" firstAttribute="top" secondItem="fbR-Rw-h1i" secondAttribute="top" constant="8" id="oNr-My-JuB"/>
+                        <constraint firstItem="Rgf-iF-9j7" firstAttribute="top" secondItem="fbR-Rw-h1i" secondAttribute="top" constant="22" id="w45-vZ-inK"/>
                     </constraints>
                     <viewLayoutGuide key="safeArea" id="bG9-Ez-faL"/>
                     <connections>
-                        <outlet property="cameraLabel" destination="kr3-eq-2ec" id="4f2-9K-rTn"/>
+                        <outlet property="cancelButton" destination="Rgf-iF-9j7" id="VSv-NC-zeG"/>
                     </connections>
                 </view>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
     </scenes>
+    <resources>
+        <image name="arrow_back_white" width="16" height="16"/>
+        <image name="camera_bg" width="320" height="568"/>
+    </resources>
 </document>
